# ManaSplice

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
examples/mega_test_app/: main.py
examples/mega_test_app/modules/: complicated_transform.py  expensive_simulation.py  load_users.py  run_healthcheck.py  save_report.py
modules/: __init__.py  run_healthcheck.py
src/manasplice/: __init__.py  analysis.py  architecture.py  cli.py  config.py  exceptions.py  history.py  models.py  paradigm.py  rewrite.py  semantic_oop.py  splitter.py
src/splinter/: __init__.py  cli.py  dependencies.py  exceptions.py  history.py  resolver.py  rewrite.py  splitter.py  utils.py
tests/: test_cli.py  test_splitter.py
